--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<body>
+  <h1 style="text-align:center;">If you can see this, HTML is working!</h1>
+  ...
+</body>
+
 <div id="flipbook" style="width:100%;max-width:600px;height:400px;margin:auto;"></div>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.11.174/web/pdf_viewer.min.css">
@@ -32,3 +37,4 @@
   pageFlip.loadFromImages(pages);
 })();
 </script>
+
