--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </style>
 </head>
 <body>
-  <h1>Loading flipbook...</h1>
+  <h1 style="display:none;">Loading flipbook...</h1>
   <div id="flipbook"></div>
 
   <script>
@@ -81,8 +81,8 @@
 
       pageFlip.loadFromImages(pages);
 
-      document.querySelector("h1").innerText = "Flipbook loaded ✅";
     })();
   </script>
 </body>
 </html>
+
